--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -21,18 +21,21 @@ jobs:
         destination_branch: "master"
         github_token: ${{ secrets.SYNC_PAT }}
         sync_tags: "true"
-    - uses: "WyriHaximus/github-action-get-previous-tag@v1"
+    - uses: actions-ecosystem/action-get-latest-tag@v1
       id: get-latest-tag
+    - uses: actions-ecosystem/action-get-latest-tag@v1
+      id: get-latest-tag-semver
       with:
-        fallback: 0.0.0
+        semver_only: true
+        initial_version: '0.0.0'
     - uses: actions-ecosystem/action-push-tag@v1
-      if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) &&  steps.get-latest-tag.outputs.tag != '0.0.0'}}
+      if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) &&  steps.get-latest-tag-semver.outputs.tag != '0.0.0' }}
       with:
-        tag: ${{ steps.get-latest-tag.outputs.tag }}-ecg
+        tag: ${{ steps.get-latest-tag-semver.outputs.tag }}-ecg
     
     - name: create release
       uses: ncipollo/release-action@v1
-      if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) &&  steps.get-latest-tag.outputs.tag != '0.0.0' }}
+      if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) &&  steps.get-latest-tag-semver.outputs.tag != '0.0.0' }}
       with:
-        tag: ${{ steps.get-latest-tag.outputs.tag }}-ecg
+        tag: ${{ steps.get-latest-tag-semver.outputs.tag }}-ecg
         token: ${{ secrets.SYNC_PAT }}
