--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -21,21 +21,20 @@ jobs:
         destination_branch: "master"
         github_token: ${{ secrets.SYNC_PAT }}
         sync_tags: "true"
-    - uses: actions-ecosystem/action-get-latest-tag@v1
-      id: get-latest-tag
-    - uses: actions-ecosystem/action-get-latest-tag@v1
-      id: get-latest-tag-semver
+    - uses: oprypin/find-latest-tag@v1
       with:
-        semver_only: true
-        initial_version: '0.0.0'
+         repository: ecg-media/mml.app
+         id: latest-tag
+
+    - run: echo "Octokit is at version ${{ steps.latest-tag.outputs.tag }}"
     - uses: actions-ecosystem/action-push-tag@v1
-      # if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) &&  steps.get-latest-tag-semver.outputs.tag != '0.0.0' }}
+      if: ${{ !endsWith( steps.latest-tag.outputs.tag, '-ecg' ) }}
       with:
-        tag: ${{ steps.get-latest-tag.outputs.tag }}-ecg
+        tag: ${{ steps.latest-tag.outputs.tag }}-ecg
     
     - name: create release
       uses: ncipollo/release-action@v1
-      # if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) &&  steps.get-latest-tag-semver.outputs.tag != '0.0.0' }}
+      if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) }}
       with:
-        tag: ${{ steps.get-latest-tag.outputs.tag }}-ecg
+        tag: ${{ steps.latest-tag.outputs.tag }}-ecg
         token: ${{ secrets.SYNC_PAT }}
