--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -24,12 +24,14 @@ jobs:
       id: latest-tag
       with:
          repository: ecg-media/mml.app
-         
-    - run: echo "Octokit is at version ${{ steps.latest-tag.outputs.tag }}"
-    - uses: actions-ecosystem/action-push-tag@v1
+    - name: Tag
       if: ${{ !endsWith( steps.latest-tag.outputs.tag, '-ecg' ) }}
-      with:
-        tag: ${{ steps.latest-tag.outputs.tag }}-ecg
+      run: |
+          tag=${{ steps.latest-tag.outputs.tag }}
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git tag -a "${tag}"
+          git push origin "${tag}"
     
     - name: create release
       uses: ncipollo/release-action@v1
