--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Tag
       if: ${{ !endsWith( steps.latest-tag.outputs.tag, '-ecg' ) }}
       run: |
-          tag=${{ steps.latest-tag.outputs.tag }}
+          tag=${{ steps.latest-tag.outputs.tag }}-ecg
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git tag -a "${tag}"
