--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -30,7 +30,7 @@ jobs:
           tag=${{ steps.latest-tag.outputs.tag }}-ecg
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git tag -a "${tag}"
+          git tag -a "${tag}" -m ""
           git push origin "${tag}"
     
     - name: create release
