--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ name: Flutter CI
 on:
   push:
     tags:
-      - "[0-9]+.[0-9]+.[0-9]+(-beta)?-ecg"
+      - "[0-9]+.[0-9]+.[0-9]+-ecg"
+      - "[0-9]+.[0-9]+.[0-9]+-beta-ecg"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
