--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -25,17 +25,17 @@ jobs:
       with:
          repository: ecg-media/mml.app
     - name: Tag
-      if: ${{ !endsWith( steps.latest-tag.outputs.tag, '-ecg' ) }}
       run: |
           tag=${{ steps.latest-tag.outputs.tag }}-ecg
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git tag -a "${tag}" -m ""
           git push origin "${tag}"
+      if: "!endsWith( ${{ steps.latest-tag.outputs.tag }}, '-ecg' )"
     
     - name: create release
       uses: ncipollo/release-action@v1
-      if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) }}
+      if: "!endsWith( ${{ steps.latest-tag.outputs.tag }}, '-ecg' )"
       with:
         tag: ${{ steps.latest-tag.outputs.tag }}-ecg
         token: ${{ secrets.SYNC_PAT }}
