--- a/config/app.cfg
+++ b/config/app.cfg
@@ -3,4 +3,4 @@ appTitle=ECG Mediathek
 appTitle_de=ECG Mediathek
 appTitle_en=ECG media library
 appTitle_ru=ECG Медиятека
-privacyUrl=https://ecgm.freeddns.org:18188/privacy
+privacyUrl=https:\/\/ecgm.freeddns.org:18188\/privacy
