--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           chmod +x customize
           ./customize
           sed -i -E "s/       versionName flutterVersionName/       versionName \"$ver_dump\"/" "./mml.app/android/app/build.gradle"
-          sed -i -E "s/        versionCode flutterVersionCode.toInteger()/        versionCode ${{github.run_number}}/" "./mml.app/android/app/build.gradle"
+          sed -i -E "s/        versionCode flutterVersionCode.toInteger()/        versionCode ${{github.run_number}}.toInteger()/" "./mml.app/android/app/build.gradle"
       - name: Artefact customized version
         uses: actions/upload-artifact@v3
         with:
@@ -64,7 +64,7 @@ jobs:
           echo "storeFile=upload-ecgm.jks" >> ./android/key.properties
       - name: Build artifacts
         run: |
-          flutter build appbundle --release --scan
+          flutter build appbundle --release
       - name: Cleanup
         run: |
           rm ./android/app/upload-ecgm.jks
