--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,9 @@ jobs:
       - name: Customizing
         run: |
           version="${{ github.ref_name }}"
-          ver_dump=$(echo "${version/-ecg/""}")
+          ver_dump=$(echo "${version/-ecg/''}")
           chmod +x customize
           ./customize
-          sed -i -E "s/    compileSdkVersion flutter.compileSdkVersion//" "./mml.app/android/app/build.gradle"
-          sed -i -E "s/    ndkVersion flutter.ndkVersion//" "./mml.app/android/app/build.gradle"
           sed -i -E "s/       versionName flutterVersionName/       versionName \"$ver_dump\"/" "./mml.app/android/app/build.gradle"
           sed -i -E "s/        versionCode flutterVersionCode.toInteger()/        versionCode \"${{github.run_number}}\".toInteger()/" "./mml.app/android/app/build.gradle"
       - name: Artefact customized version
@@ -66,6 +64,7 @@ jobs:
           echo "storeFile=upload-ecgm.jks" >> ./android/key.properties
       - name: Build artifacts
         run: |
+          cat "./android/app/build.gradle"
           flutter build appbundle --release
       - name: Cleanup
         run: |
