--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,13 +152,13 @@ jobs:
           echo '<key>method</key>' >> ios/ExportOptions.plist
           echo '<string>app-store</string>' >> ios/ExportOptions.plist
           echo '<key>teamID</key>' >> ios/ExportOptions.plist
-          echo "<string>$TEAM_ID</string>" >> ios/ExportOptions.plist
+          echo "<string>${{ secrets.APPLE_TEAM_ID }}</string>" >> ios/ExportOptions.plist
           echo '<key>signingStyle</key>' >> ios/ExportOptions.plist
           echo '<string>manual</string>' >> ios/ExportOptions.plist
           echo '<key>provisioningProfiles</key>' >> ios/ExportOptions.plist
           echo '<dict>' >> ios/ExportOptions.plist
           echo "<key>de.ecg.medialib</key>" >> ios/ExportOptions.plist
-          echo "<string>$PROVISION_PROFILE_UID</string>" >> ios/ExportOptions.plist
+          echo "<string>${{ secrets.PROVISION_PROFILE_UID }}</string>" >> ios/ExportOptions.plist
           echo '</dict>' >> ios/ExportOptions.plist
           echo '</dict>' >> ios/ExportOptions.plist
           echo '</plist>' >> ios/ExportOptions.plist
