--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       # Runs a set of commands using the runners shell
-      - name: Customizing
+      - name: master
         run: |
           version="${{ github.ref_name }}"
           ver_dump=$(echo "${version/-ecg/''}")
