--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,7 +118,7 @@ jobs:
           PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
           KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
           # import certificate and provisioning profile from secrets
-          echo -n "$P12_BASE64" | base64 --decode --input p12.txt --output $CERTIFICATE_PATH
+          echo -n "$P12_BASE64" | base64 --decode --output $CERTIFICATE_PATH
           echo -n "$PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
           # create temporary keychain
           security create-keychain -p "$P12_PASSWORD" $KEYCHAIN_PATH
