--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+          flutter-version: 3.19.6
       - name: Install project dependencies
         run: flutter pub get
       - name: Generate intermediates
@@ -65,7 +66,6 @@ jobs:
           echo "storeFile=upload-ecgm.jks" >> ./android/key.properties
       - name: Build artifacts
         run: |
-          flutter gen-l10n
           flutter build appbundle --release
       - name: Cleanup
         run: |
@@ -139,7 +139,6 @@ jobs:
           flutter gen-l10n
       - name: Build Flutter
         run: | 
-          flutter gen-l10n
           flutter build ios --release --no-codesign
       - name: Build resolve Swift dependencies
         run: xcodebuild -resolvePackageDependencies -workspace ios/Runner.xcworkspace -scheme Runner -configuration Release
