--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,10 @@ jobs:
         with:
           channel: 'stable'
           flutter-version: 3.24.5
+      - name: Reinstall Android SDK 36
+        run: |
+          rm -rf $ANDROID_SDK_ROOT/platforms/android-36
+          sdkmanager "platforms;android-36" "build-tools:34.0.0"
       - name: Install project dependencies
         run: flutter pub get
       - name: Generate intermediates
